# carnival-contrib

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  carnival_tasks.py  pyproject.toml  setup.py
.github/workflows/: pythonapp.yml
carnival_contrib/: apt.py  docker.py  docker_compose.py  ssh.py  systemd.py  transfer.py
carnival_contrib/caddy/: Caddyfile  __init__.py  caddy.service
docs/: requirements.txt
docs/source/: apt.rst  caddy.rst  conf.py  docker.rst  docker_compose.rst  index.rst  ssh.rst  systemd.rst
